test/src/e2e_vm_tests/test_programs/should_pass/language/reexport/reexport_paths/src/lib_1_2.sw
library;

pub use ::lib_1_1::*;
pub use ::lib_1_1::Items1_Variants::*;
