test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/multiple_imports_of_same_reexport/src/lib_1_1.sw
library;

pub use ::items_1::*;
pub use ::items_1::Items1_Variants::*;
